--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -13,11 +13,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="sus"
+            android:id="@+id/CharName"
             android:textSize="30sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="amogus"
+            android:id="@+id/location"
             android:textSize="30sp"/>
     </LinearLayout>
 
