adapter works a little

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -15,6 +15,10 @@
             android:text="sus"
             android:id="@+id/CharName"
             android:textSize="30sp"/>
+        <ImageView
+            android:id="@+id/char_img_view"
+            android:layout_width="200dp"
+            android:layout_height="200dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
